--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,4 @@ install:
 # command to run tests
 script:
   - flake8 . --exclude=.venv,.build,planemo_test_env,build --ignore=E501,F401,F403,E402,F999,F405,E712
-  - py.test hicmatrix/test/ --capture=sys
+  - travis_wait py.test hicmatrix/test/ --capture=sys
