--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,4 @@ install:
 # command to run tests
 script:
   - flake8 . --exclude=.venv,.build,planemo_test_env,build --ignore=E501,F401,F403,E402,F999,F405,E712
-  - py.test hicmatrix/test/test_matrixFileHandler.py --capture=sys
-  - travis_wait 30 py.test hicmatrix/test/test_HiCMatrix.py --capture=sys
+  - py.test hicmatrix/test/ --capture=sys
