--- a/.travis.yml
+++ b/.travis.yml
@@ -26,12 +26,8 @@ before_install:
 
 - export HIC_TEST_DATA_DIR="`pwd`/hicmatrix/test/test_data/"
 - echo $HIC_TEST_DATA_DIR
-- if [[ "$TRAVIS_OS_NAME" == "linux"]]; then
-  curl https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o miniconda.sh
-  ; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then curl
-  https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -o miniconda.sh
-  ; fi
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -o miniconda.sh ; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then curl https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -o miniconda.sh ; fi
 - bash miniconda.sh -b -p $HOME/miniconda
 - PATH_WITHOUT_CONDA="$PATH"
 - export PATH="$HOME/miniconda/bin:$PATH"
