--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ deploy:
     tags: true
   distributions: "sdist bdist_wheel"
   python: 3.6
+  python: 3.7
+  
 
 env:
   - TRAVIS_PYTHON_VERSION=3.6
