--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ deploy:
   on:
     tags: true
   distributions: "sdist bdist_wheel"
-  python: 3.6
-  python: 3.7
+  python:
+    - 3.6
+    - 3.7
   
 
 env:
