--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy >= 1.16.*
 scipy >= 1.2.*
-pandas = 0.25.*
+pandas >= 0.25.*
 pytables >= 3.5.*
-cooler >= 0.8.*
-intervaltree = 3.0.*
+cooler >= 0.8.5
+intervaltree >= 3.0.*
