--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ jobs:
         python.version: '3.7'
       Python38:
         python.version: '3.8'
+      Python39:
+        python.version: '3.9'
 
   steps:
   - bash: |
@@ -53,7 +55,8 @@ jobs:
         python.version: '3.7'
       Python38:
         python.version: '3.8'
-
+      Python39:
+        python.version: '3.9'
   steps:
   - bash: |
       echo "##vso[task.prependpath]$CONDA/bin"
