use shell: micromamba-shell

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,7 +14,6 @@ jobs:
         environment-name: HiCMatrix_env_ci
     - name: Analysing the code with pylint
       run: |
-        micromamba activate HiCMatrix_env_ci
         # Disable
         # C0103: Invalid name
         # C0114: Missing module docstring
@@ -32,3 +31,4 @@ jobs:
         # R1702: Too many nested blocks
         # R1728: Consider using a generator
         pylint --disable C0103,C0114,C0115,C0116,C0301,C0302,R0801,R0902,R0904,R0912,R0913,R0914,R0915,R1702,R1728 $(git ls-files '*.py')
+      shell: micromamba-shell {0}
